--- a/src/templates/es/accessibility_statement.html
+++ b/src/templates/es/accessibility_statement.html
@@ -55,7 +55,7 @@
         </p>
 
         <p>
-          Nos consideramos parcialmente conformes porque no hemos completado una auditoría completa, verificada externamente, del sitio web, ni los usuarios de lectores de pantalla lo han revisado, por lo que no podemos estar seguros de nuestro estado actual. Hemos auditado todas las páginas del sitio web utilizando varias herramientas., incluyendo el <a hreflang="en" href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, el <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> y el <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" hreflang="en" rel="nofollow">AXE Chrome plugin</a>.
+          Nos consideramos parcialmente conformes porque no hemos completado una auditoría completa, verificada externamente, del sitio web, ni los usuarios de lectores de pantalla lo han revisado, por lo que no podemos estar seguros de nuestro estado actual. Hemos auditado todas las páginas del sitio web utilizando varias herramientas., incluyendo el <a hreflang="en" href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, el <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> y el <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>.
         </p>
 
         <p>
@@ -106,7 +106,7 @@
         <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">Enfoque de evaluación</a></h2>
 
         <p>
-          Autoevaluación: el equipo de Web Almanac evaluó el contenido utilizando su propia experiencia y una serie de herramientas, incluida la <a hreflang="en" href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, el <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> y el <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" hreflang="en" rel="nofollow">AXE Chrome plugin</a>. El PDF de Web Almanac se probó con un escaneo de accesibilidad en Acrobat Reader Pro DC.
+          Autoevaluación: el equipo de Web Almanac evaluó el contenido utilizando su propia experiencia y una serie de herramientas, incluida la <a hreflang="en" href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, el <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> y el <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>. El PDF de Web Almanac se probó con un escaneo de accesibilidad en Acrobat Reader Pro DC.
         </p>
       </section>
 
