--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -96,7 +96,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
   {% if metadata.get('editors') and metadata.get('editors') | length >= 1 and (metadata.get('reviewers') == metadata.get('analysts') or metadata.get('editors') != metadata.get('analysts')) %}
   <div class="byline editors">{{ self.edited_by_before() }}
   {% for editor in metadata.get('editors') %}
-    <a class="editor" href="{{ url_for('contributors', year=year, lang=lang, _anchor=analyst) }}">{{ config.contributors[editor].name if editor in config.contributors else editor }}</a>{% if loop.length > 2 %}{{ self.comma() if loop.index < loop.length - 1 }}{{ self.oxford_comma() if loop.index == loop.length - 1 }}{% endif %}
+    <a class="editor" href="{{ url_for('contributors', year=year, lang=lang, _anchor=editor) }}">{{ config.contributors[editor].name if editor in config.contributors else editor }}</a>{% if loop.length > 2 %}{{ self.comma() if loop.index < loop.length - 1 }}{{ self.oxford_comma() if loop.index == loop.length - 1 }}{% endif %}
     {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
   {% endfor %}{{ self.edited_by_after() }}
   </div>
