fix typos in templates

--- a/src/templates/nl/2020/base.html
+++ b/src/templates/nl/2020/base.html
@@ -11,7 +11,7 @@
   </p>
 
   <p>
-    Het doel van deze editie van de Web Almanak is niet om 2020 te vergeten, maar om het te herdenken. Voor beter of slechter, dit is een hoofdstuk in onze geschiedenis. Ondanks alle externe druk van dit jaar, hebben <em>meer dan honderd <a href="./contributors">bijdragers</a></em> van de webgemeenschap zich aangemeld en talloze uren van hun tijd vrijgemaakt voor een project gewijd aan het herdenken van 2020 en de toestand van het web. Verbazingwekkend genoeg zijn we erin geslaagd om de reikwijdte van de editie van dit jaar <em>uit te breiden</em> door drie nieuwe hoofdstukken toe te voegen en er slechts één te verliezen.
+    Het doel van deze editie van de Web Almana is niet om 2020 te vergeten, maar om het te herdenken. Voor beter of slechter, dit is een hoofdstuk in onze geschiedenis. Ondanks alle externe druk van dit jaar, hebben <em>meer dan honderd <a href="./contributors">bijdragers</a></em> van de webgemeenschap zich aangemeld en talloze uren van hun tijd vrijgemaakt voor een project gewijd aan het herdenken van 2020 en de toestand van het web. Verbazingwekkend genoeg zijn we erin geslaagd om de reikwijdte van de editie van dit jaar <em>uit te breiden</em> door drie nieuwe hoofdstukken toe te voegen en er slechts één te verliezen.
   </p>
 
   <p>
