--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -151,7 +151,7 @@ Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | leng
     "third-parties": "Derden",
     "fonts": "Lettertypen",
     "performance": "Prestatie",
-    "security": "Veiligheid",
+    "security": "Beveiliging",
     "accessibility": "Toegankelijkheid",
     "seo": "SEO",
     "pwa": "PWA",
@@ -162,7 +162,7 @@ Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | leng
     "caching": "Caching",
     "cdn": "CDN",
     "page-weight": "Paginagewicht",
-    "resource-hints": "Resource Hints",
+    "resource-hints": "BronHints",
     "http2": "HTTP/2",
     "privacy": "Privacy",
     "capabilities": "Mogelijkheden",
