fix small detail

--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -162,7 +162,7 @@ Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | leng
     "caching": "Caching",
     "cdn": "CDN",
     "page-weight": "Paginagewicht",
-    "resource-hints": "BronHints",
+    "resource-hints": "Bronhints",
     "http2": "HTTP/2",
     "privacy": "Privacy",
     "capabilities": "Mogelijkheden",
