typos on templates

--- a/src/templates/nl/2019/methodology.html
+++ b/src/templates/nl/2019/methodology.html
@@ -75,7 +75,7 @@
         </p>
 
         <p class="note">
-          Houd er rekening mee dat sommige van deze zoekopdrachten vrij groot zijn en <a hreflang="en" href="https://cloud.google.com/bigquery/pricing">duur</a> kunnen zijn om zelf uit te voeren, aangezien BigQuery wordt gefactureerd per terabyte. Voor hulp bij het beheersen van uw uitgaven raadpleegt u Tim Kadlec&#8217;s bericht <a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">BigQuery gebruiken zonder de Bank te breken</a>.
+          Houd er rekening mee dat sommige van deze zoekopdrachten vrij groot zijn en <a hreflang="en" href="https://cloud.google.com/bigquery/pricing">duur</a> kunnen zijn om zelf uit te voeren, aangezien BigQuery wordt gefactureerd per terabyte. Raadpleeg, voor hulp bij het beheersen van uw uitgaven, Tim Kadlec&#8217;s bericht <a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">BigQuery gebruiken zonder de Bank te breken</a>.
         </p>
 
         <p>
@@ -139,7 +139,7 @@
       </p>
 
       <p>
-        Andere testhulpmiddelen worden gebruikt om meer geavanceerde statistieken over de pagina te bieden. <a href="#lighthouse" lang="en">Lighthouse</a> wordt bijvoorbeeld gebruikt om audits uit te voeren op de pagina om de kwaliteit ervan te analyseren op gebieden als toegankelijkheid en SEO. De sectie <a href="#tools">Hulpmiddelen</a> hieronder gaat dieper in op elk van deze tools.
+        Andere testhulpmiddelen worden gebruikt om meer geavanceerde statistieken over de pagina te bieden. <a href="#lighthouse" lang="en">Lighthouse</a> wordt bijvoorbeeld gebruikt om audits uit te voeren op de pagina om de kwaliteit ervan te analyseren op gebieden als toegankelijkheid en SEO. De sectie <a href="#tools">Hulpmiddelen</a> hieronder gaat dieper in op elk van deze hulpmiddelen.
       </p>
 
       <p>
@@ -147,7 +147,7 @@
       </p>
 
       <p>
-        Sommige statistieken zijn volledig buiten bereik. We hebben bijvoorbeeld niet per se de mogelijkheid om de hulpmiddelen te detecteren die worden gebruikt om een website te bouwen. Als een website is gebouwd met de create-react-app, kunnen we zien dat deze het React-framework gebruikt, maar niet noodzakelijkerwijs dat een bepaalde bouw-hulpmiddel wordt gebruikt. Tenzij deze tools detecteerbare vingerafdrukken achterlaten in de code van de website, kunnen we het gebruik ervan niet meten.
+        Sommige statistieken zijn volledig buiten bereik. We hebben bijvoorbeeld niet per se de mogelijkheid om de hulpmiddelen te detecteren die worden gebruikt om een website te bouwen. Als een website is gebouwd met de create-react-app, kunnen we zien dat deze het React-framework gebruikt, maar niet noodzakelijkerwijs dat een bepaalde bouw-hulpmiddel wordt gebruikt. Tenzij deze hulpmiddelen detecteerbare vingerafdrukken achterlaten in de code van de website, kunnen we het gebruik ervan niet meten.
       </p>
 
       <p>
@@ -235,7 +235,7 @@
       </p>
 
       <p>
-        Het privé-exemplaar van WebPageTest van HTTP Archive wordt gesynchroniseerd met de laatste openbare versie en aangevuld met <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">aangepaste statistieken</a>. Dit zijn fragmenten van JavaScript die aan het einde van de test op elke website worden geëvalueerd.De aangepaste statistiek <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">almanac.js</a> bevat verschillende statistieken die anders niet haalbaar waren berekend, bijvoorbeeld degene die afhankelijk zijn van de DOM-status.
+        Het privé-exemplaar van WebPageTest van HTTP Archive wordt gesynchroniseerd met de laatste openbare versie en aangevuld met <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">aangepaste statistieken</a>. Dit zijn fragmenten van JavaScript die aan het einde van de test op elke website worden geëvalueerd. De aangepaste statistiek <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">almanac.js</a> bevat verschillende statistieken die anders niet haalbaar waren berekend, bijvoorbeeld degene die afhankelijk zijn van de DOM-status.
       </p>
 
       <p>
@@ -307,11 +307,11 @@
       </p>
 
       <p>
-        Wappalyzer ondersteunt vele hoofdstukken die de populariteit van ontwikkelaarstools zoals WordPress, Bootstrap en jQuery analyseren. Bijvoorbeeld de <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">e-commerce</a> en <a href = "{{ url_for( 'chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> -hoofdstukken zijn sterk afhankelijk van de respectievelijke <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">E-commerce</a> en <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> technologieën die zijn gedetecteerd door Wappalyzer.
+        Wappalyzer ondersteunt veel hoofdstukken die de populariteit van ontwikkelaarshulpmiddelen zoals WordPress, Bootstrap en jQuery analyseren. Bijvoorbeeld de <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">e-commerce</a> en <a href = "{{ url_for( 'chapter', year=year, lang=lang, chapter='cms') }}">CMS</a>-hoofdstukken zijn sterk afhankelijk van de respectievelijke <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">E-commerce</a> en <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> technologieën die zijn gedetecteerd door Wappalyzer.
       </p>
 
       <p>
-        Alle detectietools, inclusief Wappalyzer, hebben hun beperkingen. De validiteit van hun resultaten hangt altijd af van hoe nauwkeurig hun detectiemechanismen zijn. De Web Almanac voegt een opmerking toe aan elk hoofdstuk waarin Wappalyzer wordt gebruikt, maar de analyse is mogelijk niet nauwkeurig vanwege een specifieke reden.
+        Alle detectiehulpmiddelen, inclusief Wappalyzer, hebben hun beperkingen. De validiteit van hun resultaten hangt altijd af van hoe nauwkeurig hun detectiemechanismen zijn. De Web Almanac voegt een opmerking toe aan elk hoofdstuk waarin Wappalyzer wordt gebruikt, maar de analyse is mogelijk niet nauwkeurig vanwege een specifieke reden.
       </p>
     </section>
 
@@ -335,11 +335,11 @@
       <h3 id="third-party-web"><a href="#third-party-web" lang="en">Third Party Web</a></h3>
 
       <p>
-        <a hreflang="en" href="https://www.thirdpartyweb.today/">Web van Derden</a> is een onderzoeksproject van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, auteur van het <a href=" {{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">Hoofdstuk Third parties</a>, dat HTTP Archive en Lighthouse-gegevens gebruikt om de impact te identificeren en analyseren van bronnen van derden op internet.
+        <a hreflang="en" href="https://www.thirdpartyweb.today/">Third Party Web</a> is een onderzoeksproject van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, auteur van het <a href=" {{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">Hoofdstuk Derden</a>, dat HTTP Archive en Lighthouse-gegevens gebruikt om de impact te identificeren en analyseren van bronnen van derden op internet.
       </p>
 
       <p>
-        Domeinen worden als een externe provider beschouwd als ze op ten minste 50 unieke pagina's voorkomen. Het project groepeert providers ook op basis van hun respectieve diensten in categorieën zoals advertenties, analyse en sociaal.
+        Domeinen worden als provider van derden beschouwd als ze op ten minste 50 unieke pagina's voorkomen. Het project groepeert providers ook op basis van hun respectieve diensten in categorieën zoals advertenties, analyse en sociaal.
       </p>
 
       <p>
@@ -371,7 +371,7 @@
       <h3 id="brainstorming"><a href="#brainstorming" class="anchor-link">Brainstormen</a></h3>
 
       <p>
-        De start van de Web Almanac begon in januari 2019 als een <a hreflang="en" href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">post op het HTTP Archive-forum</a> het initiatief beschrijvend en draagvlak zoekend. In maart 2019 hebben we een <a href="http://bit.ly/web-almanac-brainstorm">document voor openbare brainstormsessies</a> gemaakt waarin iedereen in de webcommunity ideeën voor hoofdstukken of statistieken kan inschrijven. Dit was een cruciale stap om ervoor te zorgen dat we ons concentreerden op dingen die belangrijk zijn voor de gemeenschap en dat er diverse stemmen in het proces zijn opgenomen.
+        De start van de Web Almanac begon in januari 2019 als een <a hreflang="en" href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">bericht op het HTTP Archive-forum</a> het initiatief beschrijvend en draagvlak zoekend. In maart 2019 hebben we een <a href="http://bit.ly/web-almanac-brainstorm">document voor openbare brainstormsessies</a> gemaakt waarin iedereen in de webgemeenschap ideeën voor hoofdstukken of statistieken kan inschrijven. Dit was een cruciale stap om ervoor te zorgen dat we ons concentreerden op dingen die belangrijk zijn voor de gemeenschap en dat er diverse stemmen in het proces zijn opgenomen.
       </p>
 
       <p>
@@ -395,7 +395,7 @@
       </p>
 
       <p>
-        Vanaf augustus 2019 begonnen de data-analisten met het schrijven van query's om de resultaten voor elke statistiek te extraheren. In totaal werden <strong>431 zoekopdrachten</strong> met de hand geschreven! U kunt door alle zoekopdrachten bladeren per hoofdstuk in de directory <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a> van de GitHub-repository van het project.
+        Vanaf augustus 2019 begonnen de data-analisten met het schrijven van query's om de resultaten voor elke statistiek te extraheren. In totaal werden <strong>431 zoekopdrachten</strong> met de hand geschreven! U kunt door alle zoekopdrachten bladeren per hoofdstuk in de <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a> map van de GitHub-repository van het project.
       </p>
     </section>
 
