--- a/src/templates/nl/accessibility_statement.html
+++ b/src/templates/nl/accessibility_statement.html
@@ -114,7 +114,7 @@
   <h2 id="feedback"><a href="#feedback" class="anchor-link">Feedback</a></h2>
 
   <p>
-    We verwelkomen feedback over de toegankelijkheid van deze website. De beste manier om ons te bereiken is door <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">een probleem op GitHub te melden</a> of ons een e-mail te sturen op <a href="mailto:team@httparchive.org">team@httparchive.org</a>. We verwelkomen ook <span lang="en">pull requests</span> voor degenen die rechtstreeks willen bijdragen. De Web Almanac is een gemeenschapsproject, beheerd door vrijwilligers, en daarom kunnen we geen tijdsbestek garanderen voor het reageren op feedback, maar zullen we zo snel mogelijk reageren.
+    We verwelkomen feedback over de toegankelijkheid van deze website. De beste manier om ons te bereiken is door <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">een issue op GitHub te melden</a> of ons een e-mail te sturen op <a href="mailto:team@httparchive.org">team@httparchive.org</a>. We verwelkomen ook <span lang="en">pull requests</span> voor degenen die rechtstreeks willen bijdragen. De Web Almanac is een gemeenschapsproject, beheerd door vrijwilligers, en daarom kunnen we geen tijdsbestek garanderen voor het reageren op feedback, maar zullen we zo snel mogelijk reageren.
   </p>
 </section>
 {% endblock %}
