--- a/src/templates/nl/2020/methodology.html
+++ b/src/templates/nl/2020/methodology.html
@@ -80,7 +80,7 @@
         </p>
 
         <p class="note">
-          Houd er rekening mee dat sommige van deze zoekopdrachten vrij groot zijn en <a hreflang="en" href="https://cloud.google.com/bigquery/pricing">duur</a> kunnen zijn om zelf uit te voeren, aangezien BigQuery wordt gefactureerd per terabyte. Voor hulp bij het beheersen van uw uitgaven raadpleegt u Tim Kadlec&#8217;s bericht <a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">BigQuery gebruiken zonder de bank te breken</a>.
+          Houd er rekening mee dat sommige van deze zoekopdrachten vrij groot zijn en <a hreflang="en" href="https://cloud.google.com/bigquery/pricing">duur</a> kunnen zijn om zelf uit te voeren, aangezien BigQuery wordt gefactureerd per terabyte. Raadpleeg, voor hulp bij het beheersen van uw uitgaven, Tim Kadlec&#8217;s bericht <a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">BigQuery gebruiken zonder de bank te breken</a>.
         </p>
 
         <p>
@@ -148,7 +148,7 @@
       </p>
 
       <p>
-        Andere test hulpmiddelen worden gebruikt om meer geavanceerde statistieken over de pagina te bieden. <a href="#lighthouse">Lighthouse</a> wordt bijvoorbeeld gebruikt om audits uit te voeren op de pagina om de kwaliteit ervan te analyseren op gebieden als toegankelijkheid en SEO. De sectie <a href="#tools">Tools</a> hieronder gaat dieper in op elk van deze tools.
+        Andere test hulpmiddelen worden gebruikt om meer geavanceerde statistieken over de pagina te bieden. <a href="#lighthouse">Lighthouse</a> wordt bijvoorbeeld gebruikt om audits uit te voeren op de pagina om de kwaliteit ervan te analyseren op gebieden als toegankelijkheid en SEO. De sectie <a href="#tools">Hulpmiddelen</a> hieronder gaat dieper in op elk van deze hulpmiddelen.
       </p>
 
       <p>
@@ -244,7 +244,7 @@
       </p>
 
       <p>
-        Het privé-exemplaar van WebPageTest van HTTP Archive wordt gesynchroniseerd met de laatste openbare versie en aangevuld met <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">aangepaste statistieken</a>. Dit zijn fragmenten van JavaScript die aan het einde van de test op elke website worden geëvalueerd. Dankzij de <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">bijdragen</a> van veel data-analisten, vooral de <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">enorme inspanningen</a> van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor ='Tiggerito') }}">Tony McCreath</a>, de 2020-editie van de Web Almanac heeft de mogelijkheden van de testinfrastructuur van HTTP Archive aanzienlijk uitgebreid met meer dan 3.000 regels nieuwe code.
+        Het privé-exemplaar van WebPageTest van HTTP Archive wordt gesynchroniseerd met de laatste openbare versie en aangevuld met <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">aangepaste statistieken</a>. Dit zijn fragmenten van JavaScript die aan het einde van de test op elke website worden geëvalueerd. Dankzij de <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">bijdragen</a> van veel data-analisten, vooral de <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">enorme inspanningen</a> van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor ='Tiggerito') }}">Tony McCreath</a>, heeft de 2020-editie van de Web Almanac de mogelijkheden van de testinfrastructuur van HTTP Archive aanzienlijk uitgebreid met meer dan 3.000 regels nieuwe code.
       </p>
 
       <p>
@@ -312,11 +312,11 @@
       </p>
 
       <p>
-        Wappalyzer ondersteunt vele hoofdstukken die de populariteit van ontwikkelaarshulpmiddelen zoals WordPress, Bootstrap en jQuery analyseren. Bijvoorbeeld de <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">e-commerce</a> en <a href = "{{url_for ( 'chapter', year = year, lang = lang, chapter = 'cms')}} ">CMS</a> -hoofdstukken zijn sterk afhankelijk van de respectievelijke <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">E-commerce</a> en <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> technologieën die zijn gedetecteerd door Wappalyzer.
+        Wappalyzer ondersteunt veel hoofdstukken die de populariteit van ontwikkelaarshulpmiddelen zoals WordPress, Bootstrap en jQuery analyseren. Bijvoorbeeld de <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">e-commerce</a> en <a href = "{{url_for ( 'chapter', year = year, lang = lang, chapter = 'cms')}} ">CMS</a> -hoofdstukken zijn sterk afhankelijk van de respectievelijke <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">E-commerce</a> en <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> technologieën die zijn gedetecteerd door Wappalyzer.
       </p>
 
       <p>
-        Alle detectietools, inclusief Wappalyzer, hebben hun beperkingen. De validiteit van hun resultaten hangt altijd af van hoe nauwkeurig hun detectiemechanismen zijn. De Web Almanac voegt een opmerking toe aan elk hoofdstuk waarin Wappalyzer wordt gebruikt, maar de analyse is mogelijk niet nauwkeurig vanwege een specifieke reden.
+        Alle detectiethulpmiddelen, inclusief Wappalyzer, hebben hun beperkingen. De validiteit van hun resultaten hangt altijd af van hoe nauwkeurig hun detectiemechanismen zijn. De Web Almanac voegt een opmerking toe aan elk hoofdstuk waarin Wappalyzer wordt gebruikt, maar de analyse is mogelijk niet nauwkeurig vanwege een specifieke reden.
       </p>
     </section>
 
@@ -340,11 +340,11 @@
       <h3 id="third-party-web"><a href="#third-party-web" class="anchor-link" lang="en">Third Party Web</a></h3>
 
       <p>
-        <a hreflang="en" href="https://www.thirdpartyweb.today/">Web van derden</a> is een onderzoeksproject van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, auteur van het <a href ="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">Hoofdstuk Third parties 2019</a>, dat HTTP Archive- en Lighthouse-gegevens gebruikt om de impact van bronnen van derden op internet te identificeren en te analyseren.
+        <a hreflang="en" href="https://www.thirdpartyweb.today/">Third Party Web</a> is een onderzoeksproject van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, auteur van het <a href ="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">Hoofdstuk Derden van 2019</a>, dat HTTP Archive- en Lighthouse-gegevens gebruikt om de impact van bronnen van derden op internet te identificeren en te analyseren.
       </p>
 
       <p>
-        Domeinen worden als een externe provider beschouwd als ze op ten minste 50 unieke pagina's voorkomen. Het project groepeert providers ook op basis van hun respectieve diensten in categorieën zoals advertenties, analyse en sociaal.
+        Domeinen worden als provider van derden beschouwd als ze op ten minste 50 unieke pagina's voorkomen. Het project groepeert providers ook op basis van hun respectieve diensten in categorieën zoals advertenties, analyse en sociaal.
       </p>
 
       <p>
@@ -396,7 +396,7 @@
       </p>
 
       <p>
-        Zoals we <a href="../2019/methodology#brainstorming">hebben verklaard in de methodologie van vorig jaar</a>:
+        Zoals we <a href="../2019/methodology#brainstorming">verklaard hebben in de methodologie van vorig jaar</a>:
       </p>
 
       <blockquote>
