change 'je' to 'u' pronouns

--- a/src/templates/nl/2019/methodology.html
+++ b/src/templates/nl/2019/methodology.html
@@ -55,7 +55,7 @@
         </p>
 
         <p>
-          De missie van de Web Almanac is om het datawarehouse van HTTP Archive nog toegankelijker te maken voor de webgemeenschap door vakexperts te laten voorzien van gecontextualiseerde inzichten. Je kunt het zien als een jaarlijkse opslagplaats van kennis over de staat van het web, aangezien 2019 de eerste editie is.
+          De missie van de Web Almanac is om het datawarehouse van HTTP Archive nog toegankelijker te maken voor de webgemeenschap door vakexperts te laten voorzien van gecontextualiseerde inzichten. U kunt het zien als een jaarlijkse opslagplaats van kennis over de staat van het web, aangezien 2019 de eerste editie is.
         </p>
 
         <p>
