--- a/src/templates/nl/2020/base.html
+++ b/src/templates/nl/2020/base.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    Veel plezier met de 2020 Web Almanac, het hoogtepunt van onze liefde voor het web. En vergeet niet om <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md"> contact op te nemen </a> als je lid wilt worden van het team.
+    Veel plezier met de 2020 Web Almanac, het hoogtepunt van onze liefde voor het web. En vergeet niet om <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md"> contact op te nemen </a> als u lid wilt worden van het team.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Hoofdredacteur van de Web Almanac</em></p>
