--- a/src/templates/es/2020/base.html
+++ b/src/templates/es/2020/base.html
@@ -6,6 +6,21 @@
 {% block dataset %}Agosto de 2020{% endblock %}
 
 {% block foreword %}
-{# TODO - Write this! #}
+{# TODO - Translate this! #}
 {{ self.coming_soon() }}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
