--- a/src/templates/zh-CN/2020/base.html
+++ b/src/templates/zh-CN/2020/base.html
@@ -6,6 +6,21 @@
 {% block dataset %}2020年8{% endblock %}
 
 {% block foreword %}
-{# TODO - Write this! #}
+{# TODO - Translate this! #}
 {{ self.coming_soon() }}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
