--- a/src/templates/base/methodology.html
+++ b/src/templates/base/methodology.html
@@ -7,6 +7,7 @@
 {% block styles %}
 {{ super() }}
 <link rel="stylesheet" href="{{ get_versioned_filename('/static/css/page.css') }}">
+<link rel="preload" href="{{ get_versioned_filename('/static/css/page.css') }}" as="style" />
 {% endblock %}
 
 {% block main %}
