--- a/src/templates/tr/base_chapter.html
+++ b/src/templates/tr/base_chapter.html
@@ -1,23 +1,23 @@
 {% extends "base/base_chapter.html" %}
 
-{% block title %}{{ metadata.get('title') }} | {{ year }} | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}{{ metadata.get('title') }} | {{ year }} | Web Almanak HTTP Archieve&#8217;dan {% endblock %}
 
-{% block description %}{{ metadata.get('description',metadata.get('title') + ' chapter of the ' + year + ' Web Almanac probing into the use of ' + metadata.get('description',metadata.get('title')) + ' on the web.') }}{% endblock %}
+{% block description %}{{ metadata.get('description', + year + ' Web Almanak&#8217;ın' + metadata.get('title') + ' bölümü '  + ' web üzerinde ' + metadata.get('description',metadata.get('title'))&#8217;ın + kullanımını araştırır.') }}{% endblock %}
 
-{% block twitter_image_alt %}Chapter image for the {{ metadata.get('title') }} chapter of the {{ year }} Web Almanac{% endblock %}
+{% block twitter_image_alt %} {{ year }} Web Almanak&#8217;ın {{ metadata.get('title') }} bölümü için bölüm görseli {% endblock %}
 
-{% block prev_next_title %}Previous and next chapter navigation{% endblock %}
+{% block prev_next_title %}Önceki ve sonraki bölümde gezinme{% endblock %}
 
-{% block explore_the_results %}Explore the results{% endblock %}
-{% block discuss_this_chapter %}Discuss this chapter{% endblock %}
-{% block comment %}comment{% endblock %}
-{% block comments %}comments{% endblock %}
-{% block comments_fallback %}Comments{% endblock %}
-{% block queries %}View queries{% endblock %}
-{% block results %}View results{% endblock %}
-{% block figure_sql %}View query{% endblock %}
-{% block figure_data %}View data{% endblock %}
-{% block figure_image %}View image{% endblock %}
+{% block explore_the_results %}Sonuçları keşfedin{% endblock %}
+{% block discuss_this_chapter %}Bu bölümü tartışın{% endblock %}
+{% block comment %}Yorum{% endblock %}
+{% block comments %}Yorumlar{% endblock %}
+{% block comments_fallback %}Yorumlar{% endblock %}
+{% block queries %}Sorguları görüntüleyin{% endblock %}
+{% block results %}Sonuçları keşfedin{% endblock %}
+{% block figure_sql %}Sorguyu görüntüleyin{% endblock %}
+{% block figure_data %}Verileri görüntüleyin{% endblock %}
+{% block figure_image %}Görseli görün{% endblock %}
 
-{% block previous %}Previous Chapter (press 'p' or ','){% endblock %}
-{% block next %}Next Chapter (press 'n' or '.'){% endblock %}
+{% block previous %}Önceki Bölüm('p' veya ','`e basın){% endblock %}
+{% block next %}Sonraki Bölüm('n' veya ','`e basın){% endblock %}
