translate error.html

--- a/src/templates/tr/error.html
+++ b/src/templates/tr/error.html
@@ -13,9 +13,9 @@
 {% macro expandedTitle(errorTitle) %}Hata: {{ errorTitle }}{% endmacro %}
 {%
   set localizedErrorMessage = {
-    "Unsupported year requested": "Desteklenmeyen yıl istendi",
-    "Unsupported chapter requested": "Desteklenmeyen bölüm istendi",
-    "Unsupported language requested": "Desteklenmeyen dil istendi",
+    "Unsupported year requested": "Desteklenmeyen yıl talep edildi",
+    "Unsupported chapter requested": "Desteklenmeyen bölüm talep edildi",
+    "Unsupported language requested": "Desteklenmeyen dil talep edildi",
     "Not Found": "Istenen URL, server üzerinde bulunamdı. Eğer URL'yi manuel olarak girdiyseniz, lütfen yazımınızı kontrol edin ve tekrar deneyin."
   }
 %}
