--- a/src/templates/tr/base_chapter.html
+++ b/src/templates/tr/base_chapter.html
@@ -6,7 +6,7 @@
 
 {% block twitter_image_alt %} {{ year }} Web Almanak&#8217;ın {{ metadata.get('title') }} bölümü için bölüm görseli {% endblock %}
 
-{% block prev_next_title %}Önceki ve sonraki bölümde gezinme{% endblock %}
+{% block prev_next_title %}Önceki ve sonraki bölümde navigasyon{% endblock %}
 
 {% block explore_the_results %}Sonuçları keşfedin{% endblock %}
 {% block discuss_this_chapter %}Bu bölümü tartışın{% endblock %}
