--- a/src/templates/tr/error.html
+++ b/src/templates/tr/error.html
@@ -16,7 +16,7 @@
     "Unsupported year requested": "Desteklenmeyen yıl talep edildi",
     "Unsupported chapter requested": "Desteklenmeyen bölüm talep edildi",
     "Unsupported language requested": "Desteklenmeyen dil talep edildi",
-    "Not Found": "Istenen URL, server üzerinde bulunamdı. Eğer URL'yi manuel olarak girdiyseniz, lütfen yazımınızı kontrol edin ve tekrar deneyin."
+    "Not Found": "İstenen URL, server üzerinde bulunamdı. Eğer URL'i manuel olarak girdiyseniz, lütfen yazımınızı kontrol edin ve tekrar deneyin."
   }
 %}
 {% macro expandedErrorMessage(errorCode, errorDescription, errorMessage) %}
