--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -117,7 +117,7 @@ Web Almanak, web topluluğunun sıkı çalışmasıyla mümkün olmuştur. {{ se
 {% block methodology_stat_2_title %}İşlenen Veriler{% endblock %}
 {% block methodology_link %}Metodolojimiz hakkında bilgi edinin{% endblock %}
 {% block methodology_description %}
-Aksi belirtilmedikçe, {{ year }} Web Almanak'ın tüm {{ supported_chapters | length }} bölümlerindeki metrikler, HTTP Archive veri kümesinden elde edilir. HTTP Archive, 2010'dan beri web'in nasıl oluşturulduğunu izleyen, topluluk tarafından yürütülen bir projedir. WebPageTest ve Lighthouse örtüsü altında, {{ self.total_websites() }} web siteleri hakkındaki metadata aylık olarak test edilir ve analiz için herkese açık bir BigQuery veritabanına dahil edilir. {{ self.dataset() }} veri kümesi {{ year }} Web Almanak&#8217;ın metrikleri için temel olarak kullanıldı.  Daha fazla bilgi için, Methodoloji sayfasını görün.
+Aksi belirtilmedikçe, {{ year }} Web Almanak&#8217;ın tüm {{ supported_chapters | length }} bölümlerindeki metrikler, HTTP Archive veri kümesinden elde edilir. HTTP Archive, 2010'dan beri web'in nasıl oluşturulduğunu izleyen, topluluk tarafından yürütülen bir projedir. WebPageTest ve Lighthouse örtüsü altında, {{ self.total_websites() }} web siteleri hakkındaki metadata aylık olarak test edilir ve analiz için herkese açık bir BigQuery veritabanına dahil edilir. {{ self.dataset() }} veri kümesi {{ year }} Web Almanak&#8217;ın metrikleri için temel olarak kullanıldı.  Daha fazla bilgi için, Methodoloji sayfasını görün.
 {% endblock %}
 
 {% block introduction %}Giriş{% endblock %}
@@ -131,7 +131,7 @@ Aksi belirtilmedikçe, {{ year }} Web Almanak'ın tüm {{ supported_chapters | l
 
 {% block ebook_title %}Ebook{% endblock %}
 {% block ebook_download_short %}Ebook PDF ({{ ebook_size_in_mb }}MB){% endblock %}
-{% block ebook_download %}Tüm {{ year }} Web Almanak'ı PDF formatında ({{ ebook_size_in_mb }}MB) indirin{% endblock %}
+{% block ebook_download %}Tüm {{ year }} Web Almanak&#8217;ı PDF formatında ({{ ebook_size_in_mb }}MB) indirin{% endblock %}
 {% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
 
 {%
@@ -148,7 +148,7 @@ Aksi belirtilmedikçe, {{ year }} Web Almanak'ın tüm {{ supported_chapters | l
     "css": "CSS",
     "markup": "Markup",
     "media": "Media",
-    "third-parties": "Üçüncü Taraflar",
+    "third-parties": "Üçüncü Partiler",
     "fonts": "Yazı tipleri",
     "performance": "Performans",
     "security": "Güvenlik",
