--- a/src/templates/tr/error.html
+++ b/src/templates/tr/error.html
@@ -20,5 +20,5 @@
   }
 %}
 {% macro expandedErrorMessage(errorCode, errorDescription, errorMessage) %}
-{{ errorCode }} {{ errorDescription }}: {{ errorMessage }}
+{{ errorCode }} <i lang="en">{{ errorDescription }}</i>: {{ errorMessage }}
 {% endmacro %}
