--- a/src/templates/tr/base_chapter.html
+++ b/src/templates/tr/base_chapter.html
@@ -1,10 +1,10 @@
 {% extends "base/base_chapter.html" %}
 
-{% block title %}{{ metadata.get('title') }} | {{ year }} | Web Almanak HTTP Archieve&#8217;dan {% endblock %}
+{% block title %}{{ metadata.get('title') }} | {{ year }} | Web Almanac HTTP Archive&#8217;dan {% endblock %}
 
-{% block description %}{{ metadata.get('description', + year + ' Web Almanak&#8217;ın' + metadata.get('title') + ' bölümü '  + ' web üzerinde ' + metadata.get('description',metadata.get('title'))&#8217;ın + kullanımını araştırır.') }}{% endblock %}
+{% block description %}{{ metadata.get('description', + year + ' Web Almanac&#8217;ın' + metadata.get('title') + ' bölümü '  + ' web üzerinde ' + metadata.get('description',metadata.get('title'))&#8217;ın + kullanımını araştırır.') }}{% endblock %}
 
-{% block twitter_image_alt %} {{ year }} Web Almanak&#8217;ın {{ metadata.get('title') }} bölümü için bölüm görseli {% endblock %}
+{% block twitter_image_alt %} {{ year }} Web Almanac&#8217;ın {{ metadata.get('title') }} bölümü için bölüm görseli {% endblock %}
 
 {% block prev_next_title %}Önceki ve sonraki bölümde navigasyon{% endblock %}
 
