--- a/src/templates/tr/2019/index.html
+++ b/src/templates/tr/2019/index.html
@@ -1,6 +1,6 @@
 {% extends "base/index.html" %}
 
-{% block title %}The {{ year }} Web Almanac{% endblock %}
-{% block description %}The Web Almanac is an annual state of the web report combining the expertise of the web community with the data and trends of the HTTP Archive.{% endblock %}
+{% block title %}{{ year }} Web Almanac{% endblock %}
+{% block description %}Web Almanak, web topluluğunun uzmanlığını HTTP Archieve verileri ve eğilimleri ile birleştiren yıllık bir web raporudur.{% endblock %}
 
-{% block twitter_image_alt %}The {{ year }} Web Almanac{% endblock %}
+{% block twitter_image_alt %}{{ year }} Web Almanac{% endblock %}
