--- a/src/templates/tr/2019/base.html
+++ b/src/templates/tr/2019/base.html
@@ -2,25 +2,21 @@
 
 {% block methodology_stat_1 %}5.8M{% endblock %}
 {% block methodology_stat_2 %}20.9 TB{% endblock %}
-{% block total_websites %}nearly 6 million{% endblock %}
-{% block dataset %}July 2019{% endblock %}
+{% block total_websites %}yaklaşık 6 milyon{% endblock %}
+{% block dataset %}Temmuz 2019{% endblock %}
 
 {% block foreword %}
   <p>
-    The open web is an amazingly complex, evolving network of technologies. Entire industries and careers are built on the web and depend on its vibrant ecosystem to succeed. As critical as the web is, understanding how it&#8217;s doing has been surprisingly elusive. Since 2010, the mission of the HTTP Archive project has been to track how the web is built, and it&#8217;s been doing an amazing job of it. However, there has been one gap that has been especially challenging to close: bringing meaning to the data that the HTTP Archive project has been collecting and enabling the community to easily understand how the web is performing. That&#8217;s where the Web Almanac comes in.
+    Açık web, inanılmaz derecede karmaşık, gelişen bir teknoloji ağıdır. Tüm endüstriler ve kariyerler web üzerine kuruludur ve başarılı olmak için onun canlı ekosistemine bağlıdır. Web eleştirel olduğu kadar, onun nasıl çalıştığını anlamak şaşırtıcı derecede zordur. 2010&#8217;dan beri, HTTP Archive projesinin misyonu, web'in nasıl inşa edildiğini ve harika bir iş çıkardığını izlemek. Ancak, kapatılması özellikle zor olan bir boşluk var: HTTP Archive projesinin topladığı veriye anlam getirmek ve web'in nasıl performans gösterdiğinin kolayca anlamaşılması için topluluğa imkan sağlamak. Bu Web Almanac&#8217;ın devreye girdiği yerdir.
   </p>
 
   <p>
-    The mission of the Web Almanac is to take the treasure trove of insights that would otherwise be accessible only to intrepid data miners, and package it up in a way that&#8217;s easy to understand. This is made possible with the help of industry experts who can make sense of the data and tell us what it means. Each of the 20 chapters in the Web Almanac focuses on a specific aspect of the web, and each one has been authored and peer reviewed by experts in their field. The strength of the Web Almanac flows directly from the expertise of the people who write it.
+    Web Almanac&#8217;'ın misyonu, aksi takdirde yalnızca cesur veri madencileri tarafından erişilebilecek içgörü hazinesini almak ve anlaşılması kolay bir şekilde paketlemektir. Bu, veriyi anlamlandırabilen ve bize ne anlama geldiğini söyleyebilen endüstri uzmanlarının yardımıyla mümkün olur. Web Almanac&#8217;taki 20 bölümün her biri web&#8217;in belirli bir yönüne odaklanır, ve her bir bölüm kendi alanındaki uzmanlar tarafından yazılmış ve kendi meslekdaşları tarafından gözden geçirilmiştir. Web Almanac&#8217;'ın gücü doğrudan onu yazan kişilerin uzmanlığından gelir.
   </p>
 
   <p>
-    Many of the findings in the Web Almanac are worthy of celebration, but it&#8217;s also an important reminder of the work still required to deliver high-quality user experiences. The data-driven analyses in each chapter are a form of accountability we all share for developing a better web. It&#8217;s not about shaming those that are getting it wrong, but about shining a guiding light on the path of best practices so there is a clear, right way to do things. With the continued help of the web community, we hope to make this an annual tradition, so each year we can track our progress and make course corrections as needed.
+    Bu raporda öğrenilecek çok şey var, öyleyse keşfetmeye başlayın ve öğrendiklerinizi toplulukla paylaşın, böylece web'in durumuna ilişkin anlayışımızı toplu olarak ilerletebiliriz.
   </p>
 
-  <p>
-    There is so much to learn in this report, so start exploring and share your takeaways with the community so we can collectively advance our understanding of the state of the web.
-  </p>
-
-  <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Web Almanac Editor-in-Chief</em></p>
+  <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Web Almanac Genel Yayın Sorumlusu</em></p>
 {% endblock %}
