double check for minor mistakes

--- a/src/templates/tr/2019/base.html
+++ b/src/templates/tr/2019/base.html
@@ -7,15 +7,15 @@
 
 {% block foreword %}
   <p>
-    Açık web, inanılmaz derecede karmaşık, gelişen bir teknoloji ağıdır. Tüm endüstriler ve kariyerler web üzerine kuruludur ve başarılı olmak için onun canlı ekosistemine bağlıdır. Web eleştirel olduğu kadar, onun nasıl çalıştığını anlamak şaşırtıcı derecede zordur. 2010&#8217;dan beri, HTTP Archive projesinin misyonu, web'in nasıl inşa edildiğini ve harika bir iş çıkardığını izlemek. Ancak, kapatılması özellikle zor olan bir boşluk var: HTTP Archive projesinin topladığı veriye anlam getirmek ve web'in nasıl performans gösterdiğinin kolayca anlamaşılması için topluluğa imkan sağlamak. Bu Web Almanac&#8217;ın devreye girdiği yerdir.
+    Açık web, inanılmaz derecede karmaşık, gelişen bir teknoloji ağıdır. Tüm endüstriler ve kariyerler web üzerine kuruludur ve başarılı olmak için onun canlı ekosistemine bağlıdır. Web eleştirel olduğu kadar, onun nasıl çalıştığını anlamak şaşırtıcı derecede zordur. 2010&#8217;dan beri, HTTP Archive projesinin misyonu, web&#8217;in nasıl inşa edildiğini ve harika bir iş çıkardığını izlemek. Ancak, kapatılması özellikle zor olan bir boşluk var: HTTP Archive projesinin topladığı veriye anlam getirmek ve web&#8217;in nasıl performans gösterdiğinin kolayca anlaşılması için topluluğa imkan sağlamak. Bu Web Almanac&#8217;ın devreye girdiği yerdir.
   </p>
 
   <p>
-    Web Almanac&#8217;'ın misyonu, aksi takdirde yalnızca cesur veri madencileri tarafından erişilebilecek içgörü hazinesini almak ve anlaşılması kolay bir şekilde paketlemektir. Bu, veriyi anlamlandırabilen ve bize ne anlama geldiğini söyleyebilen endüstri uzmanlarının yardımıyla mümkün olur. Web Almanac&#8217;taki 20 bölümün her biri web&#8217;in belirli bir yönüne odaklanır, ve her bir bölüm kendi alanındaki uzmanlar tarafından yazılmış ve kendi meslekdaşları tarafından gözden geçirilmiştir. Web Almanac&#8217;'ın gücü doğrudan onu yazan kişilerin uzmanlığından gelir.
+    Web Almanac&#8217;ın misyonu, aksi takdirde yalnızca cesur veri madencileri tarafından erişilebilecek içgörü hazinesini almak ve anlaşılması kolay bir şekilde paketlemektir. Bu, veriyi anlamlandırabilen ve bize ne anlama geldiğini söyleyebilen endüstri uzmanlarının yardımıyla mümkün olur. Web Almanac&#8217;taki 20 bölümün her biri web&#8217;in belirli bir yönüne odaklanır, ve her bir bölüm kendi alanındaki uzmanlar tarafından yazılmış ve kendi meslekdaşları tarafından gözden geçirilmiştir. Web Almanac&#8217;ın gücü doğrudan onu yazan kişilerin uzmanlığından gelir.
   </p>
 
   <p>
-    Bu raporda öğrenilecek çok şey var, öyleyse keşfetmeye başlayın ve öğrendiklerinizi toplulukla paylaşın, böylece web'in durumuna ilişkin anlayışımızı toplu olarak ilerletebiliriz.
+    Bu raporda öğrenilecek çok şey var, öyleyse keşfetmeye başlayın ve öğrendiklerinizi toplulukla paylaşın, böylece web&#8217;in durumuna ilişkin anlayışımızı toplu olarak ilerletebiliriz.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Web Almanac Genel Yayın Sorumlusu</em></p>
