--- a/src/templates/tr/2020/base.html
+++ b/src/templates/tr/2020/base.html
@@ -11,7 +11,7 @@
   </p>
 
   <p>
-    Web Almanac&#8217;ın bu basımnının amacı 2020&#8217;yi unutmamak, ama onu anmaktır. Daha iyi ya da daha kötü, bu bizim tarihimizde bir bölümdür. Bu yılın tüm dışsal baskılarına rağmen, web topluluğundan <em>100&#8217;ün üzerinde<a href="./contributors">katkıda bulunanlar</a></em> kaydoldu. 2020'yi ve web&#8217;in durumunu hatırlamaya adanmış bir proje için zamanlarının sayısız saatlerini gönüllü olarak çalıştılar. Şaşırtıcı bir şekilde, üç yeni bölüm ekleyerek ve yalnızca birini kaybederek, bu yılki basımın kapsamını <em>genişletmeyi</em> başardık.
+    Web Almanac&#8217;ın bu basımnının amacı 2020&#8217;yi unutmamak, ama onu anmaktır. Daha iyi ya da daha kötü, bu bizim tarihimizde bir bölümdür. Bu yılın tüm dışsal baskılarına rağmen, web topluluğundan <em>100&#8217;ün üzerinde<a href="./contributors">katkıda bulunanlar</a></em> kaydoldu, 2020&#8217;yi ve web&#8217;in durumunu hatırlamaya adanmış bir proje için zamanlarının sayısız saatlerini gönüllü olarak çalıştılar. Şaşırtıcı bir şekilde, üç yeni bölüm ekleyerek ve yalnızca bir bölüm çıkartarak, bu yılki basımın kapsamını <em>genişletmeyi</em> başardık.
   </p>
 
   <p>
