--- a/src/templates/tr/2020/base.html
+++ b/src/templates/tr/2020/base.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    Lütfen 2020 Web Almanac&#8217;ın keyfini çıkarın, web için duyduğumuz sevgi emeğimizin doruk noktası. Eğer takıma katılmak isterseniz, <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">bu linke ulaştığınzdan</a> emin olun.
+    Lütfen 2020 Web Almanac&#8217;ın keyfini çıkarın, web için duyduğumuz sevgi emeğimizin doruk noktası. Eğer takıma katılmak isterseniz, <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">bu linke ulaştığınızdan</a> emin olun.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Web Almanac Genel Yayın Sorumlusu</em></p>
