--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -20,7 +20,7 @@
 
 {% block mission %}
 <p>
-Misyonumuz, HTTP Archive&#8217;ın ham istatistiklerini ve eğilimlerini web topluluğunun uzmanlığı ile birleştirmektir. Web Almanak, gerçek veri ve güvenilir web uzmanları tarafından desteklenen, web durumu hakkındaki kapsamlı bir rapordur. {{ year }} baskısı sayfa içeriği, kullanıcı deneyimi, yayınlama ve dağıtım yönlerini kapsayan {{ supported_chapters | length }} bölümden oluşmuştur. 
+Misyonumuz, HTTP Archive&#8217;ın ham istatistiklerini ve eğilimlerini web topluluğunun uzmanlığı ile birleştirmektir. Web Almanak, gerçek veri ve güvenilir web uzmanları tarafından desteklenen, web durumu hakkındaki kapsamlı bir rapordur. {{ year }} baskısı sayfa içeriği, kullanıcı deneyimi, yayınlama ve dağıtım yönlerini kapsayan {{ supported_chapters | length }} bölümden oluşmuştur.
 </p>
 {% endblock %}
 
@@ -34,7 +34,7 @@ Misyonumuz, HTTP Archive&#8217;ın ham istatistiklerini ve eğilimlerini web top
 {% block translation_not_available %}İngilizce - İngilizce olarak mevcut değil{% endblock %}
 {% block language_switcher %}Dil Değiştirici{% endblock %}
 {% block year_switcher %}Yıl Değiştirici{% endblock %}
-{% block table_of_contents_switcher %}İçindekiler Tablosu Değiştiricisi% endblock %}
+{% block table_of_contents_switcher %}İçindekiler Tablosu Değiştiricisi{% endblock %}
 
 {% block home %}Ana Sayfa{% endblock %}
 {% block table_of_contents_title %}İçindekiler Tablosu{% endblock %}
